--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <div class="squaricle" id="weatherInfo">
             </div>
         </div>
-        <div >
-            <div class="city-buttons" style="display: flex; align-items: center; justify-content: center;  flex-wrap: wrap;">
+        <div>
+            <div class="city-buttons">
                 <button onclick="fetchWeatherData('Mumbai')">मुंबई</button>
                 <button onclick="fetchWeatherData('Bengaluru')">ಬೆಂಗಳೂರು</button>
                 <button onclick="fetchWeatherData('Delhi')">दिल्ली</button>
-                <!-- <button onabort="fetchWeatherData('Gandhinagar')">ગાંધીનગર</button> -->
+                <button onclick="fetchWeatherData('Gandhinagar')">ગાંધીનગર</button>
             </div>
         </div>
     </div>
